Remove fixed height, in hopes of it removing the scrollbars

--- a/static/css/bigscreen.css
+++ b/static/css/bigscreen.css
@@ -1,7 +1,6 @@
 body {
     width: 1080px;
     background-color: #222;
-    height: 1920px;
     overflow-x: hidden;
 }
     div.container {
